Hopefully Fixed Alignment Issue

--- a/website/static/css/overrides.css
+++ b/website/static/css/overrides.css
@@ -38,8 +38,7 @@
 .secondary-pallet {
     display: none;
     margin-top: 1%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 8%;
 }
 
 .description {
